# zig-pico-sdk

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  bs2_default_padded_checksummed.S  build  build.zig  build.zig.zon  cIncludes.json  openocd
src/: boot2.S  i2c.zig  lcd.zig  link.ld  main.zig  pin.zig  tusb_config.h  usb.zig  usb_isr.c
